--- a/theBlackJack/index.html
+++ b/theBlackJack/index.html
@@ -8,7 +8,7 @@
     <title>BlackJack App</title>
   </head>
   <body>
-  <div id="container">
+  <div id="conntainer">
     <h1>&#127181 BLACKJACK</h1>
     <p id="message-el">Want to play a round?</p>
     <p id="cards-el">Cards:</p>
